--- a/package.json
+++ b/package.json
@@ -3,12 +3,17 @@
   "version": "1.0.0",
   "private": true,
   "scripts": {
-    "dev": "next dev",
+    "dev": "set NODE_OPTIONS=--max_old_space_size=8192 && next dev -p 3500",
     "build": "next build",
     "start": "next start",
     "lint": "next lint"
   },
   "dependencies": {
+    "@chakra-ui/react": "^1.6.12",
+    "@emotion/react": "^11",
+    "@emotion/styled": "^11",
+    "firebase": "^9.3.0",
+    "framer-motion": "^4",
     "next": "12.0.1",
     "react": "17.0.2",
     "react-dom": "17.0.2"
