--- a/tsconfig.json
+++ b/tsconfig.json
@@ -18,6 +18,9 @@
       "dom.iterable",
       "esnext"
     ],
+    "types": [
+        "node"
+    ],
     "allowJs": true,
     "skipLibCheck": true,
     "strict": false,
