--- a/package.json
+++ b/package.json
@@ -9,14 +9,23 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@chakra-ui/icons": "^1.1.0",
     "@chakra-ui/react": "^1.6.12",
     "@emotion/react": "^11",
     "@emotion/styled": "^11",
+    "@types/js-cookie": "^3.0.0",
+    "date-fns": "^2.25.0",
+    "dotenv": "^10.0.0",
     "firebase": "^9.3.0",
+    "firebase-admin": "^10.0.0",
     "framer-motion": "^4",
+    "js-cookie": "^3.0.1",
     "next": "12.0.1",
     "react": "17.0.2",
-    "react-dom": "17.0.2"
+    "react-dom": "17.0.2",
+    "react-hook-form": "^7.19.5",
+    "react-icons": "^4.3.1",
+    "swr": "^1.0.1"
   },
   "devDependencies": {
     "@types/node": "^16.11.6",
