--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@chakra-ui/react": "^1.6.12",
     "@emotion/react": "^11",
     "@emotion/styled": "^11",
+    "@stripe/stripe-js": "^1.21.1",
     "@types/js-cookie": "^3.0.0",
     "date-fns": "^2.25.0",
     "dotenv": "^10.0.0",
