--- a/package.json
+++ b/package.json
@@ -20,8 +20,10 @@
     "firebase": "^9.3.0",
     "firebase-admin": "^10.0.0",
     "framer-motion": "^4",
+    "iframe-resizer": "^4.3.2",
     "js-cookie": "^3.0.1",
     "next": "12.0.1",
+    "next-seo": "^4.28.1",
     "react": "17.0.2",
     "react-dom": "17.0.2",
     "react-hook-form": "^7.19.5",
